textarea letterspacing fixed

--- a/src/styles/cmps/_card-compose.scss
+++ b/src/styles/cmps/_card-compose.scss
@@ -36,7 +36,6 @@
         resize: none;
         height: 67px;
         font-size: 14px;
-        letter-spacing: -1px;
         margin-right: 7px;
         
         &:placeholder-shown { 
